# SpaceX_Job_Analysis

./: ReadMe.md  Ruben_FernandezCarbon_Resume_2023.txt  analyze_spacex_applications.py  pyproject.toml  scrape_spacex_positions.py  spacex_jobs.csv  split_resume_sections.json
