[tool.poetry]
name = "my_spacex_application_assistant"
version = "0.1.0"
description = ""
authors = ["ruben <ruben@moonshot.codes>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
selenium = "^4.15.2"
nltk = "^3.8.1"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
plotly = "^5.18.0"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
